--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,14 @@
     <title>Document</title>
   </head>
   <body>
-    <label for="name">Nickname:</label>
-    <input type="text" id="name" name="name" />
-    <ul class="avatar-list"></ul>
-    <div class="color"></div>
-    <canvas class="canvas" width="600px" height="600px"></canvas>
+    <main class="main"`>
+      <label for="name">Nickname:</label>
+      <input type="text" id="name" name="name" />
+      <ul class="avatar-list"></ul>
+      <div class="color"></div>
+      <canvas class="canvas" width="600px" height="600px"></canvas>
+    </main>
+    <aside id="rank" class="rank"></aside>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
     <script type="module" src="./index.js"></script>
   </body>
