--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
       <label for="name">Nickname:</label>
       <input type="text" id="name" name="name" />
       <ul class="avatar-list"></ul>
-      <div class="color"></div>
-      <canvas class="canvas" width="600px" height="600px"></canvas>
+      <div class="color">
+        <span class="timer"></span>
+      </div>
+      <canvas class="canvas" width="1200px" height="600px"></canvas>
     </main>
     <aside id="rank" class="rank"></aside>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
