--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,17 @@
     <title>Document</title>
   </head>
   <body>
-    <main class="main"`>
-      <label for="name">Nickname:</label>
-      <input type="text" id="name" name="name" />
-      <ul class="avatar-list"></ul>
+    <button class="config-button">
+      <img src="./images/gear.png" alt="config" />
+    </button>
+    <main class="main">
+      <div class="modal">
+        <div class="modal-box">
+          <label for="name">Nickname:</label>
+          <input type="text" id="name" name="name" />
+          <ul class="avatar-list"></ul>
+        </div>
+      </div>
       <div class="color">
         <span class="timer"></span>
       </div>
